fixed some spacing

--- a/src/style/view-question.css
+++ b/src/style/view-question.css
@@ -22,10 +22,10 @@
 }
 
 .question-heading {
-    font-size: 35px;
+    font-size: 30px;
     font-weight: 400;
     text-align: center;
-    padding-top: 10%;
+    padding-top: 7%;
     margin-left: auto;
     margin-right: auto;
     color: black;
